--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-<h1>Hello This is y2kprabu's website </h1>
+<!DOCTYPE html>
+<html>
+<body>
+<h1>Sundara automations</h1>
+<p>This is hosted by y2kprabu</p>
+</body>
+</html>
