Update index.html with help text

--- a/index.html
+++ b/index.html
@@ -2,6 +2,22 @@
 <html>
 <body>
 <h1>Sundara automations</h1>
-<p>This is hosted by y2kprabu</p>
+    <br/><br/>
+  <h2>Event Creator Add on for Gmail</h2>
+    <br/><br/>
+<p>This Gmail widget helps the gmail users to select an email and create an event in your Google calendar from the Email Subject and Body, 
+  through the Add on screen, without leaving the Gmail window.
+  <br/><br/>
+  <h2 How to use it</h2>
+    Click the Orange calendar icon in the right panel of your Gmail
+    Select any email in the email panel on the left
+    you will see that the add-on view refreshes with the Subject of the email title
+    It also shows a DateTime picker for Event start date and Event End date.
+    Select the Appropriate Date and Time of the Event
+    Click on Convert to Event.
+    thats it .. within 2 seconds, the event is created in your calendar now, without leaving the Gmail window.
+    Hope you love this add on.
+    thanks 
+</p>
 </body>
 </html>
