--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <br/><br/>
   <h2 How to use it</h2>
     Click the Orange calendar icon in the right panel of your Gmail
+      <img src="Homepage.png" alt="Home Page on Add on Selection" width="500" height="600"></img>
     Select any email in the email panel on the left
     you will see that the add-on view refreshes with the Subject of the email title
     It also shows a DateTime picker for Event start date and Event End date.
