--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
   through the Add on screen, without leaving the Gmail window.
   <br/><br/>
   <h2 How to use it</h2>
-    Click the Orange calendar icon in the right panel of your Gmail
-      <img src="Homepage.png" alt="Home Page on Add on Selection" width="500" height="600"></img>
+      <OL>
+    <LI>Click the Orange calendar icon in the right panel of your Gmail</LI>
+    <LI>  <img src="./Homepage.png" alt="Home Page on Add on Selection" width="500" height="600"></img></LI>
     Select any email in the email panel on the left
     you will see that the add-on view refreshes with the Subject of the email title
     It also shows a DateTime picker for Event start date and Event End date.
     Select the Appropriate Date and Time of the Event
     Click on Convert to Event.
     thats it .. within 2 seconds, the event is created in your calendar now, without leaving the Gmail window.
+    </OL>
     Hope you love this add on.
     thanks 
 </p>
