--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <h2 How to use it</h2>
       <OL>
     <LI>Click the Orange calendar icon in the right panel of your Gmail</LI>
-    <LI>  <img src="./Homepage.png" alt="Home Page on Add on Selection" width="500" height="600"></img></LI>
+    <LI>  <img src="./HomePage.png" alt="Home Page on Add on Selection" width="500" height="600"></img></LI>
     Select any email in the email panel on the left
     you will see that the add-on view refreshes with the Subject of the email title
     It also shows a DateTime picker for Event start date and Event End date.
