--- a/index.html
+++ b/index.html
@@ -10,14 +10,18 @@
   <br/><br/>
   <h2 How to use it</h2>
       <OL>
-    <LI>Click the Orange calendar icon in the right panel of your Gmail</LI>
-    <LI>  <img src="./HomePage.png" alt="Home Page on Add on Selection" width="500" height="600"></img></LI>
-    Select any email in the email panel on the left
-    you will see that the add-on view refreshes with the Subject of the email title
-    It also shows a DateTime picker for Event start date and Event End date.
-    Select the Appropriate Date and Time of the Event
-    Click on Convert to Event.
-    thats it .. within 2 seconds, the event is created in your calendar now, without leaving the Gmail window.
+    <LI>After the Add on is added from marketplace, the Orange calendar icon in the right panel of your Gmail</LI>
+    <LI>  <img src="./beforeaddonclick.png" alt="Home Page Before Add on Selection" width="1000" height="600"></img></LI>
+    <LI>Select the Orange calendar icon in the right panel, The Add on loads with the home page as below </LI>
+    <LI>  <img src="./afteraddonclick.png" alt="Home Page After Add on Selection" width="1000" height="600"></img></LI>
+    <LI>Select any email in the email panel on the left</LI>
+    <LI>you will see that the add-on view refreshes with the Subject of the email title
+    It also shows a DateTime picker for Event start date and Event End date.</LI>
+    <LI>  <img src="./MailSelectedShowingEventCreationCard.png" alt="Home Page After Add on Selection" width="1000" height="600"></img></LI>
+       
+    <LI>Select the Appropriate Date and Time of the Event
+    Click on Convert to Event.</LI>
+    <LI>Thats it !!!.. within 2 seconds, the event is created in your calendar now, without leaving the Gmail window.</LI>
     </OL>
     Hope you love this add on.
     thanks 
