--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <br/>
   <h2>Event Creator Add on for Gmail</h2>
     <br/>
-<p style='font-size:25px' >This Gmail widget helps the gmail users to select an email and create an event in your Google calendar from the Email Subject and Body, 
+<p style='font-size:25px' >This Event Creator for Gmail add on helps the gmail users to select an email and create an event in your Google calendar from the Email Subject and Body, 
   through the Add on screen, without leaving the Gmail window.</p>
   <br/><br/>
   <h2 How to use it</h2>
@@ -24,6 +24,6 @@
     </OL>
     Hope you love this add on.
     thanks 
-
+<a href="./privacypolicy"> Privacy Policy</a>
 </body>
 </html>
