Update index.html for verification

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+    <meta name="google-site-verification" content="qjNagHnbbnyGmCtw2oiKqi1Jui5-2SpsVhd-vjzsB8w" />
 <body>
 <h1>Sundara automations</h1>
     <br/>
