--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-    <meta name="google-site-verification" content="qjNagHnbbnyGmCtw2oiKqi1Jui5-2SpsVhd-vjzsB8w" />
+    <head>
+        <meta name="google-site-verification" content="qjNagHnbbnyGmCtw2oiKqi1Jui5-2SpsVhd-vjzsB8w" />
+    </head>
 <body>
 <h1>Sundara automations</h1>
     <br/>
