--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 <h1>Sundara automations</h1>
     <br/>
-  <h2>Event Creator Add on for Gmail</h2>
+  <h2>Event Creator Add on for Gmail™</h2>
     <br/>
 <p style='font-size:25px' >This Event Creator for Gmail add on helps the gmail users to select an email and create an event in your Google calendar from the Email Subject and Body, 
   through the Add on screen, without leaving the Gmail window.</p>
