--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 <h1>Sundara automations</h1>
     <br/>
-  <h2>Event Creator from Email™</h2>
+  <h2>Event Creator from Email</h2>
     <br/>
 <p style='font-size:25px' >This Event Creator from Event will work with your Gmail as an add-on and helps the Gmail™ users to select an email and create an event in your Google calendar from the Email Subject and Body, 
   through the Add on screen, without leaving the Gmail™ window.</p>
